--- a/.github/workflows/despliegue.yml
+++ b/.github/workflows/despliegue.yml
@@ -1,37 +1,32 @@
-name: CI/CD Docker Build & Push
+name: Build, Push Docker and Deploy to EC2
 
-# 1.1. Disparadores: Se ejecuta al hacer push a la rama main
 on:
   push:
     branches: [ "main" ]
 
 env:
-  # Configuración de variables de entorno con tus datos
-  DOCKERHUB_USERNAME: colmay2005
-  DOCKERHUB_REPO: fullstack-back 
+  DOCKERHUB_USERNAME: colmay2005 #usuario DockerHub
+  DOCKERHUB_REPO:   fullstack-back     #repo DockerHub
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Obtener código del repositorio
+    # 1️⃣ Obtener código
     - name: Checkout repo
       uses: actions/checkout@v4
 
-    # 2. Loguear en Docker Hub (Requisito 1.3)
-    # Usa los secrets que configuraste en el paso anterior
+    # 2️⃣ Loguear en Docker Hub
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # 3. Construir y subir imagen Docker (Requisito 1.2 y 1.3)
-    # Genera el tag: colmay2005/fullstack-back:latest
+
+    # 3️⃣ Construir y subir imagen Docker
     - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ${{ env.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest
+      run: |
+        docker build -t $DOCKERHUB_USERNAME/$DOCKERHUB_REPO:latest .
+        docker push $DOCKERHUB_USERNAME/$DOCKERHUB_REPO:latest
